test(model): substitui getFirst() por get(0)